[YLI-106] Copy remaining page templates and added cleanup.

--- a/openy_lily/templates/layout/node/node-content.html.twig
+++ b/openy_lily/templates/layout/node/node-content.html.twig
@@ -6,7 +6,7 @@
   {% set template = is_front ? 'content-1col-frontpage.html.twig' : 'content-1col.html.twig' %}
 {% endif %}
 
-{% extends '@ymca/layout/content/' ~ template %}
+{% extends '@openy_lily/layout/content/' ~ template %}
 
 {% block maincontent %}
   {% if is_front %}
