--- a/openy_lily/templates/page/page--node--blog.html.twig
+++ b/openy_lily/templates/page/page--node--blog.html.twig
@@ -1,4 +1,4 @@
-{% extends "@openy_lily/page.html.twig" %}
+{% extends "@openy_lily/page/page.html.twig" %}
 
 {% block primary_menu %}
     {{ parent() }}
