--- a/openy_lily/templates/layout/node/node-lead.html.twig
+++ b/openy_lily/templates/layout/node/node-lead.html.twig
@@ -3,7 +3,7 @@
   {% set template = is_front ? 'lead-2col-frontpage.html.twig' : 'lead-2col.html.twig' %}
 {% endif %}
 
-{% extends '@ymca/layout/lead/' ~ template %}
+{% extends '@openy_lily/layout/lead/' ~ template %}
 
 {% block lead_description %}
   {{ content.field_lead_description }}
