--- a/templates/taxonomy_term/taxonomy-term--amenities--icon.html.twig
+++ b/templates/taxonomy_term/taxonomy-term--amenities--icon.html.twig
@@ -27,4 +27,5 @@
 #}
 <div{{ attributes }}>
   <div title="{{ name.0['#context']['value'] }}">{{ content }}</div>
+  <div class="term-name">{{ name }}</div>
 </div>
