--- a/templates/node/node--blog--teaser.html.twig
+++ b/templates/node/node--blog--teaser.html.twig
@@ -109,6 +109,7 @@
         </div>
       {% endif %}
       <h2 style="{{ color }};">
+        <span class="quotes">&ldquo;</span>
         <a href="{{ url }}" rel="bookmark">
           {{ label }}
         </a>
