--- a/modules/forms.scss
+++ b/modules/forms.scss
@@ -21,6 +21,10 @@ input.form-control {
   }
 }
 
+.emma-block-simple-form .form-item {
+  margin: 0;
+}
+
 .webform-submission-form {
   margin-bottom: 20px;
 }
