[YGH-492] fix Prev/Next paragraph borders style on blog node page

--- a/blog.scss
+++ b/blog.scss
@@ -147,6 +147,10 @@
   .paragraph--type--content-pager {
     padding-top: 50px;
   }
+
+  .field-blog-description {
+    clear: both;
+  }
 }
 
 img.alignleft {
