--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--banner.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--banner.html.twig
@@ -45,7 +45,7 @@
   ]
 %}
 
-<div{{ attributes.addClass(classes) }}>
+<div{{ attributes.addClass(classes) }} style="background-color:# {{- content.field_prgf_color -}}">
   <div class="banner-image">
     <div class="banner-image-wrapper">
       {{ content.field_prgf_image }}
