[YGH-488] hide appeared term names where they should not be displayed

--- a/amenities.scss
+++ b/amenities.scss
@@ -125,6 +125,10 @@
       }
     }
   }
+
+  .views-field-field-location-amenities .term-name {
+    display: none;
+  }
 }
 
 .list-branch-amenities-wrapper {
