--- a/prototypes/scss/paragraphs/amenities.scss
+++ b/prototypes/scss/paragraphs/amenities.scss
@@ -125,6 +125,10 @@
       }
     }
   }
+
+  .views-field-field-location-amenities .term-name {
+    display: none;
+  }
 }
 
 .list-branch-amenities-wrapper {
