--- a/themes/openy_themes/openy_rose/scss/modules/_blog.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_blog.scss
@@ -285,6 +285,10 @@
     @include cachet();
     text-transform: uppercase;
   }
+
+  .no-results {
+    margin-bottom: 49px;
+  }
 }
 
 .comma-list {
