--- a/themes/openy_admin/templates/install-page.html.twig
+++ b/themes/openy_admin/templates/install-page.html.twig
@@ -14,7 +14,7 @@
   <header role="banner">
     {% if site_name %}
       <h1 class="page-title">
-        <img src="../{{ active_theme_path() }}/images/thunder-logo.png">
+        {{ site_name }}
         {% if site_version %}
           <span class="site-version">{{ site_version }}</span>
         {% endif %}
