--- a/themes/openy_themes/openy_rose/scss/modules/_branch.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_branch.scss
@@ -163,7 +163,7 @@
         }
 
         .ui-tabs-active {
-          background: $dark-magenta;
+          background: $pink;
         }
 
         .ui-tabs-anchor {
@@ -175,7 +175,7 @@
       }
 
       .ui-tabs-panel {
-        background: $dark-magenta;
+        background: $pink;
         border-radius: 0;
         color: $white;
         border: none;
