--- a/structs/footer.scss
+++ b/structs/footer.scss
@@ -33,16 +33,9 @@
       }
       @include breakpoint(tablet) {
         width: 40%;
+        clear: both;
       }
 
-      .item-share--uwa {
-        font-family: $font-family-sans-serif;
-        font-size: 12px;
-        line-height: lh(18, 12);
-        @include breakpoint(tablet) {
-          position: absolute;
-        }
-      }
     }
 
     &--bottom {
@@ -146,9 +139,9 @@
         width: 100%;
       }
 
-      @include breakpoint(tablet){
+      //@include breakpoint(tablet){
         display: none;
-      }
+      //}
 
       @include breakpoint(laptop){
         display: block;
@@ -310,11 +303,61 @@
   font-size: 12px;
   line-height: lh(18, 12);
   clear: both;
+  // Mobile  first
+  position: relative;
+  top: 15px;
+  height: 10px;
   padding: 0px 15px;
+
   @include breakpoint(tablet) {
-    position: absolute;
-    bottom: 0;
+    float: right;
+    clear: both;
+    width: 40%;
+      //top: 0px;
   }
+
+  @media (min-width: 845px) and (max-width: 1090px) {
+    float: right;
+    clear: both;
+    width: 40%;
+
+  }
+  @include breakpoint(laptop) {
+    position: inherit;
+    top: 0px;
+    float: left;
+    padding: 0px 115px;
+    width: 60%;
+  }
+  .block-share {
+    padding-top: 22px;
+  }
+}
+
+#block-footerunitedwayagencyblock {
+  //margin-left: 10px;
+  padding: 0px 15px;
+  // Mobile first
+  position: relative;
+  top: -40px;
+  height: 40px;
+  @include breakpoint(laptop) {
+    //float: left;
+    position: inherit;
+    top:0;
+  }
+  @include breakpoint(tablet) {
+    float: right;
+    clear: both;
+    width: 40%;
+    top: -40px;
+  }
+  //@media (min-width: 845px) and (max-width: 1090px) {
+  //  float: right;
+  //  clear: both;
+  //  width: 40%;
+  //
+  //}
 }
 
 //Footer social icons centered on mobile
@@ -338,3 +381,14 @@
     max-width: 350px;
   }
 }
+
+.inner-footer--address {
+  width: 100%;
+  padding: 24px 15px 0;
+  .item-share--uwa {
+    font-family: $font-family-sans-serif;
+    font-size: 12px;
+    line-height: lh(18, 12);
+  }
+}
+
