--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -164,6 +164,12 @@
         <div class="inner-footer--right">
           {{ page.footer_social }}
         </div>
+
+        <div class="inner-footer--address">
+          <div class="row">
+            {{ page.footer_address }}
+          </div>
+        </div>
       </div>
     </footer>
 
