--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--banner.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--banner.html.twig
@@ -44,8 +44,9 @@
     'banner',
   ]
 %}
+{% set color = '#' ~ content.field_prgf_color['#items'].entity.field_color.value %}
 
-<div{{ attributes.addClass(classes) }} style="background-color:# {{- content.field_prgf_color -}}">
+<div{{ attributes.addClass(classes) }} style="background-color: {{ color }}">
   <div class="banner-image">
     <div class="banner-image-wrapper">
       {{ content.field_prgf_image }}
