--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--small-banner.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--small-banner.html.twig
@@ -45,7 +45,9 @@
     'banner--small',
   ]
 %}
-<div{{ attributes.addClass(classes) }} style="background-color:# {{- content.field_prgf_color -}}">
+{% set color = '#' ~ content.field_prgf_color['#items'].entity.field_color.value %}
+
+<div{{ attributes.addClass(classes) }} style="background-color: {{ color }}">
   <div class="banner-image">
     <div class="banner-image-wrapper">
       {{ content.field_prgf_image }}
