--- a/docroot/modules/custom/ymca_frontend/templates/locations-content.html.twig
+++ b/docroot/modules/custom/ymca_frontend/templates/locations-content.html.twig
@@ -13,7 +13,11 @@
       <div class="col-sm-12 header-copy">
         <h1>{{ 'Locations'|t }}</h1>
         <article class="richtext">
-          <p>{{ 'Membership includes access to all Minnesota YMCAs, including these metro locations.'|t }}</p>
+          <p>
+            {% trans %}
+              Membership includes access to all Minnesota <a href="https://www.ymcamn.org/locations/ymcas_outside_the_metro">Ys</a>, including these metro locations.
+            {% endtrans %}
+          </p>
         </article>
       </div>
     </div>
