[YMCA-1606] Change text on locations page

--- a/docroot/modules/custom/ymca_frontend/templates/locations-content.html.twig
+++ b/docroot/modules/custom/ymca_frontend/templates/locations-content.html.twig
@@ -15,7 +15,7 @@
         <article class="richtext">
           <p>
             {% trans %}
-              Membership includes access to all Minnesota <a href="https://www.ymcamn.org/locations/ymcas_outside_the_metro">Ys</a>, including these metro locations.
+              Membership includes access to all Minnesota <a class="white-underlined-link" href="https://www.ymcamn.org/locations/ymcas_outside_the_metro">Ys</a>, including these metro locations.
             {% endtrans %}
           </p>
         </article>
