--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -8461,6 +8461,11 @@ body .ajax-progress-throbber .throbber {
   margin-top: 10px;
 }
 
+.white-underlined-link {
+  color: #fff;
+  text-decoration: underline;
+}
+
 .form-item {
   margin-bottom: 15px;
 }
