--- a/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
+++ b/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
@@ -891,3 +891,8 @@ body .ajax-progress-throbber {
 .affix .navbar-default #block-top-menu-2 .navbar-nav > li:first-child > a {
   margin-top: 10px;
 }
+
+.white-underlined-link {
+  color: $white;
+  text-decoration: underline;
+}
