[YMCA-1606] Change text on locations page

--- a/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
+++ b/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
@@ -894,5 +894,28 @@ body .ajax-progress-throbber {
 
 .white-underlined-link {
   color: $white;
-  text-decoration: underline;
+  .underlined {
+    text-decoration: underline;
+  }
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    color: $white;
+  }
+}
+
+span.grey-caret {
+  &:after {
+    margin-left: 10px;
+    width: 8%;
+    color: #b3b3b3;
+    content: 'o';
+    vertical-align: baseline;
+    text-align: center;
+    font-size: 24px;
+    font-family: 'YMCA';
+    -webkit-transition: color .3s ease-out;
+    -moz-transition: color .3s ease-out;
+    -ms-transition: color .3s ease-out;
+  }
 }
