--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--story-card--default.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--story-card--default.html.twig
@@ -51,7 +51,7 @@ set classes = [
       {{ content.field_prgf_title }}
     </h3>
     <div class="quote">
-      <i class="icon"></i>
+      {% include active_theme_path() ~ '/img/icons/quote_purple.svg' %}
       {{ content.field_prgf_headline }}
     </div>
     <div class="link">
