--- a/themes/openy_themes/openy_rose/scss/modules/_blog.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_blog.scss
@@ -135,9 +135,7 @@
       float: left;
       min-height: 360px;
 
-      i {
-        background-size: 27px;
-        background-position: top left;
+      svg {
         margin-top: 21px;
       }
     }
