--- a/themes/openy_themes/openy_rose/templates/node/node--blog--teaser.html.twig
+++ b/themes/openy_themes/openy_rose/templates/node/node--blog--teaser.html.twig
@@ -96,7 +96,7 @@
       {% if ( node.field_blog_style.value == "story" ) %}
         <div class="story-card">
           <div class="quote">
-            <i class="icon"></i>
+            {% include active_theme_path() ~ '/img/icons/quote_purple.svg' %}
           </div>
         </div>
       {% endif %}
