--- a/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
@@ -441,6 +441,7 @@ html, body {
           @include rem(font-size, 30px);
           margin-bottom: 50px ;
           line-height: 1.2em;
+          text-transform: none;
         }
       }
       &--content {
