[YMCA-1606] locations page copy change

--- a/docroot/modules/custom/ymca_frontend/templates/locations-content.html.twig
+++ b/docroot/modules/custom/ymca_frontend/templates/locations-content.html.twig
@@ -15,7 +15,7 @@
         <article class="richtext">
           <p>
             {% trans %}
-              Membership includes access to all <a class="white-underlined-link" href="{{ base_path }}locations/ymcas_outside_the_metro"><span class="underlined">Minnesota Ys</span><span class="grey-caret"></span></a>, including these metro locations.
+              Membership includes access to all <a class="white-underlined-link" href="{{ base_path }}locations/ymcas_outside_the_metro"><span class="underlined">Minnesota Ys</span><span class="grey-caret"></span></a>
             {% endtrans %}
           </p>
         </article>
